<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".ContactoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_btn_volver_contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_titulo_contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_contacto"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_etiqueta_seleccion_contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sel_historial"
            android:textColor="#666666"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo_contacto" />

        <LinearLayout
            android:id="@+id/layout_contenedor_selector_contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_etiqueta_seleccion_contacto">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_contacto_empresa"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:backgroundTint="#37D366"
                android:text="@string/btn_empresa"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_contacto_nutricionista"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="#CCCCCC"
                android:text="@string/btn_nutricionista"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="20dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_etiqueta_info_contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/info_contacto_etiqueta"
            android:textColor="#666666"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_contenedor_selector_contacto" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_contenedor_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardBackgroundColor="#F1F1F1"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_etiqueta_info_contacto">

            <LinearLayout
                android:id="@+id/layout_detalles_contacto"
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_etiqueta_correo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_correo"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_dato_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/dato_email_defecto"
                    android:textColor="#333333" />

                <TextView
                    android:id="@+id/tv_etiqueta_telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_telefono"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_dato_telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dato_tel_prefijo"
                    android:textColor="#333333" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enviar_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FCF6BB"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:text="@string/enviar_correo"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textStyle="bold"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_contenedor_info" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>