<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Grisfondo"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_titulo_andar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/verdeMenu"
        android:gravity="center"
        android:text="@string/titulo_andar"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_contenedor_andar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_etiqueta_pregunta_andar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/pregAndar"
            android:textColor="@color/negroTexto"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/layout_selector_tiempo_andar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_horas_andar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:inputType="number"
                android:text="00"
                android:textColor="@color/negroTexto"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tv_unidad_horas_andar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:text="@string/unidad_horas"
                android:textColor="@color/negroTexto"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_minutos_andar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="#FFFFFF"
                android:gravity="center"
                android:inputType="number"
                android:text="00"
                android:textColor="@color/negroTexto"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tv_unidad_minutos_andar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/unidad_minutos"
                android:textColor="@color/negroTexto"
                android:textSize="25sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_anotaciones_andar"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="25dp"
            android:background="#FFFFFF"
            android:gravity="top|start"
            android:hint="@string/anotacion_hint"
            android:inputType="textMultiLine"
            android:padding="12dp"
            android:textColorHint="#888888" />

        <Button
            android:id="@+id/btn_guardar_andar"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/amarilloBoton"
            android:text="@string/guardar"
            android:textColor="@color/negroTexto"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>