<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_contenedor_plato"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Grisfondo">

    <TextView
        android:id="@+id/tv_pregunta_plato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@color/Blancotarjetas"
        android:padding="8dp"
        android:text="@string/preg_plato_hoy"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_foto_plato"
        android:layout_width="243dp"
        android:layout_height="243dp"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/anadirimagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pregunta_plato" />

    <Button
        android:id="@+id/btn_subir_plato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/amarilloBoton"
        android:text="@string/btn_subir"
        android:textColor="@color/black"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_foto_plato" />

    <Button
        android:id="@+id/btn_reintentar_plato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/amarilloBoton"
        android:text="@string/btn_volver_subir"
        android:textColor="@color/black"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_subir_plato" />

</androidx.constraintlayout.widget.ConstraintLayout>