<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".HistorialDeporte">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_titulo_historial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_historial"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_etiqueta_seleccionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sel_historial"
            android:textColor="#666666"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo_historial" />

        <LinearLayout
            android:id="@+id/layout_contenedor_selectores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_etiqueta_seleccionar">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_historial_deporte"
                android:layout_width="85dp"
                android:layout_height="65dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#BDBDBD"
                app:cornerRadius="20dp"
                app:icon="@drawable/corriendo"
                app:iconGravity="textStart"
                app:iconSize="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_historial_comida"
                android:layout_width="85dp"
                android:layout_height="65dp"
                android:backgroundTint="#F05268"
                app:cornerRadius="20dp"
                app:icon="@drawable/plato"
                app:iconGravity="textStart"
                app:iconSize="30dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_etiqueta_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/sel_dia"
            android:textColor="#666666"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_contenedor_selectores" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_contenedor_calendario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="#F1F1F1"
            app:cardCornerRadius="24dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_etiqueta_dia">

            <CalendarView
                android:id="@+id/cv_calendario_historial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Theme.AppCompat.Light" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>