<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicios">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="100dp">

        <!--Linear Layout VERTICAL (contendor)-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/Grisfondo"
            android:orientation="vertical">

            <!--LinearLayout HORIZONTAL 1 (andar)-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/icoAndar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/andar" />

                <TextView
                    android:id="@+id/tv_andar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/andar"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch_andar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:checked="false"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:thumbTint="@color/colores_switch"
                    android:trackTint="@color/barraswitch"
                    android:translationX="-4dp" />
            </LinearLayout>

            <View
                android:id="@+id/divisor_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#808080" />

            <!--LinearLayout HORIZONTAL 2 (subir escaleras)-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/icoEscaleras"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/escaleras" />

                <TextView
                    android:id="@+id/tv_escaleras"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/escaleras"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch_escaleras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:checked="false"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:thumbTint="@color/colores_switch"
                    android:trackTint="@color/barraswitch"
                    android:translationX="-4dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#808080" />

            <!--LinearLayout HORIZONTAL 3 (estirar)-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/icoEstirar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/estirar" />

                <TextView
                    android:id="@+id/tv_estirar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/estirar"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch_estirar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:checked="false"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:thumbTint="@color/colores_switch"
                    android:trackTint="@color/barraswitch"
                    android:translationX="-4dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#808080" />

            <!--LinearLayout HORIZONTAL 4 (sentadillas)-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/icoSentadillas"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/sentadillas" />

                <TextView
                    android:id="@+id/tv_sentadillas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/sentadillas"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/switch_sentadillas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:checked="false"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:thumbTint="@color/colores_switch"
                    android:trackTint="@color/barraswitch"
                    android:translationX="-4dp" />
            </LinearLayout>

            <View
                android:id="@+id/divisor_final"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#808080" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>